Ajout CI plus rappide

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,115 @@
 target/
 .git/
 *.pdb
-*.exe
-*.dll
+
+STAGE - Ingénieur Mise au Point Bi-Fuel 
+
+FEV France • Saint-Étienne-du-Rouvray, Normandie, France (Sur site)
+
+
+
+Enregistrer
+Candidature simplifiée
+
+FEV France
+
+
+STAGE - Ingénieur Mise au Point Bi-Fuel
+
+Saint-Étienne-du-Rouvray, Normandie, France · il y a 1 jour · 58 candidats
+
+Promue par un recruteur • Aucune info disponible pour le moment sur les réponses
+
+
+Sur site
+
+Stagiaire / Alternant
+Candidature simplifiée
+
+Enregistrer
+Découvrez comment vous vous positionnez par rapport aux 58 candidats
+
+Accédez à des informations exclusives sur les candidats, consultez les offres d’emploi pour lesquelles vous avez le plus de chances d’obtenir une réponse, et plus encore.
+
+Réactivez Premium : - 50%
+
+Rencontrez l’équipe de recrutement
+
+
+Fatima A. 
+
+• 3e
+
+🚗 🔋 🍃INGENIERIE DES TRANSPORTS💡🧲 Rejoignez nous!|À votre écoute, je cible votre poste idéal  !| Senior Talent Acquisition Specialist at FEV France
+
+Auteur de l’offre d’emploi
+
+Envoyer un message
+À propos de l’offre d’emploi
+OFFRE DE STAGE 5 A
+
+(Centre d’essais FEV France à Saint Etienne du Rouvray (76) )
+
+
+
+STAGE – INGENIEUR MISE AU POINT BI-FUEL 
+
+
+
+
+
+Présentation de FEV France :
+
+
+
+FEV France accompagne les industriels de la mobilité dans le développement et l’optimisation des groupes motopropulseurs de toutes énergies. 
+
+Au sein de notre centre d’essais de Saint-Étienne-du-Rouvray, vous rejoindrez le département Calibration.
+
+
+
+Nous recherchons 2 stagiaires pour ces deux types de missions :
+
+
+
+1. Stagiaire Ingénieur(e) Mise au Point Bi-Fuel – Essence (GDI) / GPL (MPI) – Euro 7 – Combustion
+
+2. Stagiaire Ingénieur(e) Mise au Point Bi-Fuel – Essence (GDI) / GPL (MPI) – Euro 7 – Richness Control, Regulators & Models
+
+
+
+Ces stages vous permettront de participer au développement de motorisations bi-carburation dans le cadre des futures normes Euro 7.
+
+
+
+Votre Profil :
+
+Études d’ingénieur (ou équivalent) dans l’un des domaines suivants :
+
+Génie énergétique
+Génie mécanique
+Systèmes embarqués
+Intérêt pour les motorisations, la combustion et la mise au point moteur apprécié.
+
+Vous êtes en dernière année d'école d'ingénieur dans une de ces spécialités.
+
+
+
+Vos Missions :
+
+Sous la responsabilité du Team Leader ou du Responsable Métier, l’Ingénieur(e) Calibration réalise, dans le cadre du développement, la mise au point d’un groupe motopropulseur (toutes énergies). Vos missions sont les suivantes :
+
+Interpréter et analyser les cahiers des charges clients.
+Participer à l’identification de la RoadMap, des essais à réaliser, des moyens et des ressources nécessaires à la prestation.
+Contribuer à des missions techniques sur son périmètre (altitude, froid, chaud…).
+Réaliser les opérations de mise au point moteur en respectant les objectifs de prestations : performances, consommation, émissions, départ à froid et à chaud, agrément, bruit, brio.
+Garantir le respect des différents jalons du projet.
+
+
+Stage de fin d'étude à pourvoir dès début janvier pour une durée de 6 mois.
+
+
+
+
+
+Pour postuler envoyez votre Cv à Mickael ANDRE Responsable RH opérationnel sur le mail suivant : andre@fev.com
