--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,3 @@
-name: CI Moseiik
-
-on:
-  push:
-  pull_request:
-
 jobs:
   ci-matrix:
     runs-on: ubuntu-latest
@@ -13,11 +7,17 @@ jobs:
         platform: [linux/amd64, linux/arm64]
 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Setup QEMU (arm64 only)
+        if: matrix.platform == 'linux/arm64'
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
 
       - name: Build Docker image
         run: |
@@ -25,7 +25,7 @@ jobs:
             --platform ${{ matrix.platform }} \
             -t moseiik:${{ matrix.platform }} .
 
-      - name: Run tests in Docker
+      - name: Run tests
         run: |
           docker run --rm \
             --platform ${{ matrix.platform }} \
