--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,13 @@ name: CI Moseiik PAM & SOUKAYNA
 
 on:
   push: #ici on a choisi de lancer CI sur un push pour détecter les erreurs immédiatement et ne  pas cassés la branche main 
+      branches:
+      - main   
 
   pull_request: # ce choix car permet de re-vérifie le code valide la branche avant de la fusionner 
+    branches:
+      - main   
+ 
 
 jobs:
   build-and-test:
@@ -24,7 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl unzip                
           curl -L "https://nasext-vaader.insa-rennes.fr/ietr-vaader/moseiik_test_images.zip" -o moseiik_test_images.zip
-          unzip moseiik_test_images.zip -d assets
+          unzip -o moseiik_test_images.zip -d assets
           rm moseiik_test_images.zip
     
       - name:  QEMU 
